# strix

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  README_BACKUP.md  README_ZH.md  docker-compose.dev.yml  gui_client.py  pyproject.toml  start.sh  test_deployment.py  test_failure_visibility.py  test_failure_visibility_simple.py  test_preflight.py  verify_container_attach.py  verify_fix.py  verify_strix_changes.py
containers/: Dockerfile
desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: DEVELOPMENT.md  agent-philosophy.md  architecture-improvements.md  done.md  js-route-extraction-integration.md  js-route-extraction.md  local-llm-setup.md  strix-v2-philosophy.md
docs/future-features/: mcp-integration.md
docs/logic/: 13-scope-system-architecture.md  README.md
plugins/: README.md
plugins/ffuf/: manifest.yaml  plugin.py
plugins/httpx/: manifest.yaml  plugin.py
plugins/katana/: manifest.yaml  plugin.py
plugins/nuclei/: manifest.yaml  plugin.py
plugins/sqlmap/: manifest.yaml  plugin.py
scripts/: post-commit-build-sandbox.sh  setup-local-image.sh
strix/agents/: __init__.py  base_agent.py  planner.py  state.py
strix/brain/: __init__.py  llm_judge.py  openai_judge.py
strix/core/: __init__.py  action_handlers.py  agent_philosophy.py  concurrent_executor.py  heartbeat.py  llm_controller.py  llm_response_parser.py  mitre.py  owasp.py  phase_schemas.py  plugin.py  poc_validator.py  prompt_controller.py  scan_controller.py  scan_phase.py  step_based_loop.py  step_executor.py  tci.py
strix/engine/: __init__.py  phase_manager.py  result_collector.py  scan_engine.py
strix/examples/: llm_scan.py
strix/interface/: cli.py  main.py  tui.py  utils.py
strix/llm/: llm.py  memory_compressor.py  request_queue.py
strix/models/: __init__.py  finding.py  judgment.py  request.py  verification.py
strix/plugins/: __init__.py  base.py  loader.py  manifest.py  prompt_plugins.py  registry.py
strix/runtime/: __init__.py  deployment_manager.py  docker_runtime.py
strix/scope/: config.py
strix/server/: __init__.py  app.py
strix/storage/: __init__.py  database.py  models.py
strix/telemetry/: tracer.py
strix/tools/: __init__.py  container_tools.py  executor.py  registry.py
tests/: mock_target.py  test_agent_philosophy.py  test_planner.py  test_tci.py
trix/agents/: base_agent.py  state.py
trix/llm/: llm.py  (+3 more)
(+123 files in other folders)
