[tool.poetry]
name = "Trix"
version = "2.0.0"
description = "Open-source AI Hackers for your apps - Rebranded from Strix"
authors = ["Trix <hi@usetrix.com>"]
readme = "README.md"
license = "Apache-2.0"
...
packages = [
  { include = "trix", format = ["sdist", "wheel"] }
]
include = [
  "LICENSE",
  "README.md",
  "trix/**/*.jinja",
  "trix/**/*.xml",
  "trix/**/*.tcss"
]

# ...

[tool.mypy.overrides]
module = [
    # ...
]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["trix"]
known-third-party = ["fastapi", "pydantic"]

[tool.pyright]
include = ["trix"]

# ...

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=trix",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80"
]

[tool.coverage.run]
source = ["trix"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["strix"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ============================================================================
# Bandit Configuration (Security Linting)
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "docs", "build", "dist"]
skips = ["B101", "B601", "B404", "B603", "B607"]  # Skip assert, shell injection, subprocess import and partial path checks
severity = "medium"
